# pluscode-typesense

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: controller.py  model.py  routes.py  server.py  service.py
app/config/: __init__.py  logger.py  settings.py
app/config/database/: database.py  typesense.py
app/config/database/seed/: product.py
app/core/: controller.py  geolocator.py  model.py  repository.py  routes.py  service.py  typesense.py
app/seed/: __init__.py  product.py
