[tool.poetry]
name = "pluscode-typesense"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
sqlmodel = "^0.0.24"
uvicorn = "^0.34.2"
faker = "^37.1.0"
pydantic-settings = "^2.9.1"
psycopg2-binary = "^2.9.10"
typesense = "^0.19.0"
pluscodes = "^2022.1.3"
geopy = "^2.4.1"
pgeocode = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
